// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Component basic render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "height": 200,
        "paddingLeft": 5,
        "paddingRight": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "2000",
            "textColor": undefined,
            "value": "2000",
          },
          Object {
            "label": "2001",
            "textColor": undefined,
            "value": "2001",
          },
          Object {
            "label": "2002",
            "textColor": undefined,
            "value": "2002",
          },
          Object {
            "label": "2003",
            "textColor": undefined,
            "value": "2003",
          },
          Object {
            "label": "2004",
            "textColor": undefined,
            "value": "2004",
          },
          Object {
            "label": "2005",
            "textColor": undefined,
            "value": "2005",
          },
          Object {
            "label": "2006",
            "textColor": undefined,
            "value": "2006",
          },
          Object {
            "label": "2007",
            "textColor": undefined,
            "value": "2007",
          },
          Object {
            "label": "2008",
            "textColor": undefined,
            "value": "2008",
          },
          Object {
            "label": "2009",
            "textColor": undefined,
            "value": "2009",
          },
          Object {
            "label": "2010",
            "textColor": undefined,
            "value": "2010",
          },
          Object {
            "label": "2011",
            "textColor": undefined,
            "value": "2011",
          },
          Object {
            "label": "2012",
            "textColor": undefined,
            "value": "2012",
          },
          Object {
            "label": "2013",
            "textColor": undefined,
            "value": "2013",
          },
          Object {
            "label": "2014",
            "textColor": undefined,
            "value": "2014",
          },
          Object {
            "label": "2015",
            "textColor": undefined,
            "value": "2015",
          },
          Object {
            "label": "2016",
            "textColor": undefined,
            "value": "2016",
          },
          Object {
            "label": "2017",
            "textColor": undefined,
            "value": "2017",
          },
          Object {
            "label": "2018",
            "textColor": undefined,
            "value": "2018",
          },
          Object {
            "label": "2019",
            "textColor": undefined,
            "value": "2019",
          },
          Object {
            "label": "2020",
            "textColor": undefined,
            "value": "2020",
          },
          Object {
            "label": "2021",
            "textColor": undefined,
            "value": "2021",
          },
          Object {
            "label": "2022",
            "textColor": undefined,
            "value": "2022",
          },
          Object {
            "label": "2023",
            "textColor": undefined,
            "value": "2023",
          },
          Object {
            "label": "2024",
            "textColor": undefined,
            "value": "2024",
          },
          Object {
            "label": "2025",
            "textColor": undefined,
            "value": "2025",
          },
          Object {
            "label": "2026",
            "textColor": undefined,
            "value": "2026",
          },
          Object {
            "label": "2027",
            "textColor": undefined,
            "value": "2027",
          },
          Object {
            "label": "2028",
            "textColor": undefined,
            "value": "2028",
          },
          Object {
            "label": "2029",
            "textColor": undefined,
            "value": "2029",
          },
          Object {
            "label": "2030",
            "textColor": undefined,
            "value": "2030",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "01",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "02",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "03",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "04",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "05",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "06",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "07",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "08",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "09",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "01",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "02",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "03",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "04",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "05",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "06",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "07",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "08",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "09",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
          Object {
            "label": "13",
            "textColor": undefined,
            "value": "13",
          },
          Object {
            "label": "14",
            "textColor": undefined,
            "value": "14",
          },
          Object {
            "label": "15",
            "textColor": undefined,
            "value": "15",
          },
          Object {
            "label": "16",
            "textColor": undefined,
            "value": "16",
          },
          Object {
            "label": "17",
            "textColor": undefined,
            "value": "17",
          },
          Object {
            "label": "18",
            "textColor": undefined,
            "value": "18",
          },
          Object {
            "label": "19",
            "textColor": undefined,
            "value": "19",
          },
          Object {
            "label": "20",
            "textColor": undefined,
            "value": "20",
          },
          Object {
            "label": "21",
            "textColor": undefined,
            "value": "21",
          },
          Object {
            "label": "22",
            "textColor": undefined,
            "value": "22",
          },
          Object {
            "label": "23",
            "textColor": undefined,
            "value": "23",
          },
          Object {
            "label": "24",
            "textColor": undefined,
            "value": "24",
          },
          Object {
            "label": "25",
            "textColor": undefined,
            "value": "25",
          },
          Object {
            "label": "26",
            "textColor": undefined,
            "value": "26",
          },
          Object {
            "label": "27",
            "textColor": undefined,
            "value": "27",
          },
          Object {
            "label": "28",
            "textColor": undefined,
            "value": "28",
          },
          Object {
            "label": "29",
            "textColor": undefined,
            "value": "29",
          },
          Object {
            "label": "30",
            "textColor": undefined,
            "value": "30",
          },
          Object {
            "label": "31",
            "textColor": undefined,
            "value": "31",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`DatePicker Component should render picker which ampmFirst 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "height": 200,
        "paddingLeft": 5,
        "paddingRight": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "AM",
            "textColor": undefined,
            "value": "0",
          },
          Object {
            "label": "PM",
            "textColor": undefined,
            "value": "1",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={1}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "0",
          },
          Object {
            "label": "1",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "2",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "3",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "4",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "5",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "6",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "7",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "8",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "9",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={11}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "0",
            "textColor": undefined,
            "value": "0",
          },
          Object {
            "label": "1",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "2",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "3",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "4",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "5",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "6",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "7",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "8",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "9",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
          Object {
            "label": "13",
            "textColor": undefined,
            "value": "13",
          },
          Object {
            "label": "14",
            "textColor": undefined,
            "value": "14",
          },
          Object {
            "label": "15",
            "textColor": undefined,
            "value": "15",
          },
          Object {
            "label": "16",
            "textColor": undefined,
            "value": "16",
          },
          Object {
            "label": "17",
            "textColor": undefined,
            "value": "17",
          },
          Object {
            "label": "18",
            "textColor": undefined,
            "value": "18",
          },
          Object {
            "label": "19",
            "textColor": undefined,
            "value": "19",
          },
          Object {
            "label": "20",
            "textColor": undefined,
            "value": "20",
          },
          Object {
            "label": "21",
            "textColor": undefined,
            "value": "21",
          },
          Object {
            "label": "22",
            "textColor": undefined,
            "value": "22",
          },
          Object {
            "label": "23",
            "textColor": undefined,
            "value": "23",
          },
          Object {
            "label": "24",
            "textColor": undefined,
            "value": "24",
          },
          Object {
            "label": "25",
            "textColor": undefined,
            "value": "25",
          },
          Object {
            "label": "26",
            "textColor": undefined,
            "value": "26",
          },
          Object {
            "label": "27",
            "textColor": undefined,
            "value": "27",
          },
          Object {
            "label": "28",
            "textColor": undefined,
            "value": "28",
          },
          Object {
            "label": "29",
            "textColor": undefined,
            "value": "29",
          },
          Object {
            "label": "30",
            "textColor": undefined,
            "value": "30",
          },
          Object {
            "label": "31",
            "textColor": undefined,
            "value": "31",
          },
          Object {
            "label": "32",
            "textColor": undefined,
            "value": "32",
          },
          Object {
            "label": "33",
            "textColor": undefined,
            "value": "33",
          },
          Object {
            "label": "34",
            "textColor": undefined,
            "value": "34",
          },
          Object {
            "label": "35",
            "textColor": undefined,
            "value": "35",
          },
          Object {
            "label": "36",
            "textColor": undefined,
            "value": "36",
          },
          Object {
            "label": "37",
            "textColor": undefined,
            "value": "37",
          },
          Object {
            "label": "38",
            "textColor": undefined,
            "value": "38",
          },
          Object {
            "label": "39",
            "textColor": undefined,
            "value": "39",
          },
          Object {
            "label": "40",
            "textColor": undefined,
            "value": "40",
          },
          Object {
            "label": "41",
            "textColor": undefined,
            "value": "41",
          },
          Object {
            "label": "42",
            "textColor": undefined,
            "value": "42",
          },
          Object {
            "label": "43",
            "textColor": undefined,
            "value": "43",
          },
          Object {
            "label": "44",
            "textColor": undefined,
            "value": "44",
          },
          Object {
            "label": "45",
            "textColor": undefined,
            "value": "45",
          },
          Object {
            "label": "46",
            "textColor": undefined,
            "value": "46",
          },
          Object {
            "label": "47",
            "textColor": undefined,
            "value": "47",
          },
          Object {
            "label": "48",
            "textColor": undefined,
            "value": "48",
          },
          Object {
            "label": "49",
            "textColor": undefined,
            "value": "49",
          },
          Object {
            "label": "50",
            "textColor": undefined,
            "value": "50",
          },
          Object {
            "label": "51",
            "textColor": undefined,
            "value": "51",
          },
          Object {
            "label": "52",
            "textColor": undefined,
            "value": "52",
          },
          Object {
            "label": "53",
            "textColor": undefined,
            "value": "53",
          },
          Object {
            "label": "54",
            "textColor": undefined,
            "value": "54",
          },
          Object {
            "label": "55",
            "textColor": undefined,
            "value": "55",
          },
          Object {
            "label": "56",
            "textColor": undefined,
            "value": "56",
          },
          Object {
            "label": "57",
            "textColor": undefined,
            "value": "57",
          },
          Object {
            "label": "58",
            "textColor": undefined,
            "value": "58",
          },
          Object {
            "label": "59",
            "textColor": undefined,
            "value": "59",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={59}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`DatePicker Component should render picker which locale is cn 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "height": 200,
        "paddingLeft": 5,
        "paddingRight": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "2000年",
            "textColor": undefined,
            "value": "2000",
          },
          Object {
            "label": "2001年",
            "textColor": undefined,
            "value": "2001",
          },
          Object {
            "label": "2002年",
            "textColor": undefined,
            "value": "2002",
          },
          Object {
            "label": "2003年",
            "textColor": undefined,
            "value": "2003",
          },
          Object {
            "label": "2004年",
            "textColor": undefined,
            "value": "2004",
          },
          Object {
            "label": "2005年",
            "textColor": undefined,
            "value": "2005",
          },
          Object {
            "label": "2006年",
            "textColor": undefined,
            "value": "2006",
          },
          Object {
            "label": "2007年",
            "textColor": undefined,
            "value": "2007",
          },
          Object {
            "label": "2008年",
            "textColor": undefined,
            "value": "2008",
          },
          Object {
            "label": "2009年",
            "textColor": undefined,
            "value": "2009",
          },
          Object {
            "label": "2010年",
            "textColor": undefined,
            "value": "2010",
          },
          Object {
            "label": "2011年",
            "textColor": undefined,
            "value": "2011",
          },
          Object {
            "label": "2012年",
            "textColor": undefined,
            "value": "2012",
          },
          Object {
            "label": "2013年",
            "textColor": undefined,
            "value": "2013",
          },
          Object {
            "label": "2014年",
            "textColor": undefined,
            "value": "2014",
          },
          Object {
            "label": "2015年",
            "textColor": undefined,
            "value": "2015",
          },
          Object {
            "label": "2016年",
            "textColor": undefined,
            "value": "2016",
          },
          Object {
            "label": "2017年",
            "textColor": undefined,
            "value": "2017",
          },
          Object {
            "label": "2018年",
            "textColor": undefined,
            "value": "2018",
          },
          Object {
            "label": "2019年",
            "textColor": undefined,
            "value": "2019",
          },
          Object {
            "label": "2020年",
            "textColor": undefined,
            "value": "2020",
          },
          Object {
            "label": "2021年",
            "textColor": undefined,
            "value": "2021",
          },
          Object {
            "label": "2022年",
            "textColor": undefined,
            "value": "2022",
          },
          Object {
            "label": "2023年",
            "textColor": undefined,
            "value": "2023",
          },
          Object {
            "label": "2024年",
            "textColor": undefined,
            "value": "2024",
          },
          Object {
            "label": "2025年",
            "textColor": undefined,
            "value": "2025",
          },
          Object {
            "label": "2026年",
            "textColor": undefined,
            "value": "2026",
          },
          Object {
            "label": "2027年",
            "textColor": undefined,
            "value": "2027",
          },
          Object {
            "label": "2028年",
            "textColor": undefined,
            "value": "2028",
          },
          Object {
            "label": "2029年",
            "textColor": undefined,
            "value": "2029",
          },
          Object {
            "label": "2030年",
            "textColor": undefined,
            "value": "2030",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={18}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "01月",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "02月",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "03月",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "04月",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "05月",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "06月",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "07月",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "08月",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "09月",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10月",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11月",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12月",
            "textColor": undefined,
            "value": "12",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={11}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "01日",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "02日",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "03日",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "04日",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "05日",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "06日",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "07日",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "08日",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "09日",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10日",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11日",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12日",
            "textColor": undefined,
            "value": "12",
          },
          Object {
            "label": "13日",
            "textColor": undefined,
            "value": "13",
          },
          Object {
            "label": "14日",
            "textColor": undefined,
            "value": "14",
          },
          Object {
            "label": "15日",
            "textColor": undefined,
            "value": "15",
          },
          Object {
            "label": "16日",
            "textColor": undefined,
            "value": "16",
          },
          Object {
            "label": "17日",
            "textColor": undefined,
            "value": "17",
          },
          Object {
            "label": "18日",
            "textColor": undefined,
            "value": "18",
          },
          Object {
            "label": "19日",
            "textColor": undefined,
            "value": "19",
          },
          Object {
            "label": "20日",
            "textColor": undefined,
            "value": "20",
          },
          Object {
            "label": "21日",
            "textColor": undefined,
            "value": "21",
          },
          Object {
            "label": "22日",
            "textColor": undefined,
            "value": "22",
          },
          Object {
            "label": "23日",
            "textColor": undefined,
            "value": "23",
          },
          Object {
            "label": "24日",
            "textColor": undefined,
            "value": "24",
          },
          Object {
            "label": "25日",
            "textColor": undefined,
            "value": "25",
          },
          Object {
            "label": "26日",
            "textColor": undefined,
            "value": "26",
          },
          Object {
            "label": "27日",
            "textColor": undefined,
            "value": "27",
          },
          Object {
            "label": "28日",
            "textColor": undefined,
            "value": "28",
          },
          Object {
            "label": "29日",
            "textColor": undefined,
            "value": "29",
          },
          Object {
            "label": "30日",
            "textColor": undefined,
            "value": "30",
          },
          Object {
            "label": "31日",
            "textColor": undefined,
            "value": "31",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={13}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`DatePicker Component should render picker which mode is datetime 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "height": 200,
        "paddingLeft": 5,
        "paddingRight": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "2000",
            "textColor": undefined,
            "value": "2000",
          },
          Object {
            "label": "2001",
            "textColor": undefined,
            "value": "2001",
          },
          Object {
            "label": "2002",
            "textColor": undefined,
            "value": "2002",
          },
          Object {
            "label": "2003",
            "textColor": undefined,
            "value": "2003",
          },
          Object {
            "label": "2004",
            "textColor": undefined,
            "value": "2004",
          },
          Object {
            "label": "2005",
            "textColor": undefined,
            "value": "2005",
          },
          Object {
            "label": "2006",
            "textColor": undefined,
            "value": "2006",
          },
          Object {
            "label": "2007",
            "textColor": undefined,
            "value": "2007",
          },
          Object {
            "label": "2008",
            "textColor": undefined,
            "value": "2008",
          },
          Object {
            "label": "2009",
            "textColor": undefined,
            "value": "2009",
          },
          Object {
            "label": "2010",
            "textColor": undefined,
            "value": "2010",
          },
          Object {
            "label": "2011",
            "textColor": undefined,
            "value": "2011",
          },
          Object {
            "label": "2012",
            "textColor": undefined,
            "value": "2012",
          },
          Object {
            "label": "2013",
            "textColor": undefined,
            "value": "2013",
          },
          Object {
            "label": "2014",
            "textColor": undefined,
            "value": "2014",
          },
          Object {
            "label": "2015",
            "textColor": undefined,
            "value": "2015",
          },
          Object {
            "label": "2016",
            "textColor": undefined,
            "value": "2016",
          },
          Object {
            "label": "2017",
            "textColor": undefined,
            "value": "2017",
          },
          Object {
            "label": "2018",
            "textColor": undefined,
            "value": "2018",
          },
          Object {
            "label": "2019",
            "textColor": undefined,
            "value": "2019",
          },
          Object {
            "label": "2020",
            "textColor": undefined,
            "value": "2020",
          },
          Object {
            "label": "2021",
            "textColor": undefined,
            "value": "2021",
          },
          Object {
            "label": "2022",
            "textColor": undefined,
            "value": "2022",
          },
          Object {
            "label": "2023",
            "textColor": undefined,
            "value": "2023",
          },
          Object {
            "label": "2024",
            "textColor": undefined,
            "value": "2024",
          },
          Object {
            "label": "2025",
            "textColor": undefined,
            "value": "2025",
          },
          Object {
            "label": "2026",
            "textColor": undefined,
            "value": "2026",
          },
          Object {
            "label": "2027",
            "textColor": undefined,
            "value": "2027",
          },
          Object {
            "label": "2028",
            "textColor": undefined,
            "value": "2028",
          },
          Object {
            "label": "2029",
            "textColor": undefined,
            "value": "2029",
          },
          Object {
            "label": "2030",
            "textColor": undefined,
            "value": "2030",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={18}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "01",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "02",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "03",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "04",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "05",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "06",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "07",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "08",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "09",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={11}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "01",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "02",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "03",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "04",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "05",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "06",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "07",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "08",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "09",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
          Object {
            "label": "13",
            "textColor": undefined,
            "value": "13",
          },
          Object {
            "label": "14",
            "textColor": undefined,
            "value": "14",
          },
          Object {
            "label": "15",
            "textColor": undefined,
            "value": "15",
          },
          Object {
            "label": "16",
            "textColor": undefined,
            "value": "16",
          },
          Object {
            "label": "17",
            "textColor": undefined,
            "value": "17",
          },
          Object {
            "label": "18",
            "textColor": undefined,
            "value": "18",
          },
          Object {
            "label": "19",
            "textColor": undefined,
            "value": "19",
          },
          Object {
            "label": "20",
            "textColor": undefined,
            "value": "20",
          },
          Object {
            "label": "21",
            "textColor": undefined,
            "value": "21",
          },
          Object {
            "label": "22",
            "textColor": undefined,
            "value": "22",
          },
          Object {
            "label": "23",
            "textColor": undefined,
            "value": "23",
          },
          Object {
            "label": "24",
            "textColor": undefined,
            "value": "24",
          },
          Object {
            "label": "25",
            "textColor": undefined,
            "value": "25",
          },
          Object {
            "label": "26",
            "textColor": undefined,
            "value": "26",
          },
          Object {
            "label": "27",
            "textColor": undefined,
            "value": "27",
          },
          Object {
            "label": "28",
            "textColor": undefined,
            "value": "28",
          },
          Object {
            "label": "29",
            "textColor": undefined,
            "value": "29",
          },
          Object {
            "label": "30",
            "textColor": undefined,
            "value": "30",
          },
          Object {
            "label": "31",
            "textColor": undefined,
            "value": "31",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={13}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "0",
            "textColor": undefined,
            "value": "0",
          },
          Object {
            "label": "1",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "2",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "3",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "4",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "5",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "6",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "7",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "8",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "9",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
          Object {
            "label": "13",
            "textColor": undefined,
            "value": "13",
          },
          Object {
            "label": "14",
            "textColor": undefined,
            "value": "14",
          },
          Object {
            "label": "15",
            "textColor": undefined,
            "value": "15",
          },
          Object {
            "label": "16",
            "textColor": undefined,
            "value": "16",
          },
          Object {
            "label": "17",
            "textColor": undefined,
            "value": "17",
          },
          Object {
            "label": "18",
            "textColor": undefined,
            "value": "18",
          },
          Object {
            "label": "19",
            "textColor": undefined,
            "value": "19",
          },
          Object {
            "label": "20",
            "textColor": undefined,
            "value": "20",
          },
          Object {
            "label": "21",
            "textColor": undefined,
            "value": "21",
          },
          Object {
            "label": "22",
            "textColor": undefined,
            "value": "22",
          },
          Object {
            "label": "23",
            "textColor": undefined,
            "value": "23",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={11}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "0",
            "textColor": undefined,
            "value": "0",
          },
          Object {
            "label": "1",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "2",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "3",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "4",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "5",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "6",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "7",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "8",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "9",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
          Object {
            "label": "13",
            "textColor": undefined,
            "value": "13",
          },
          Object {
            "label": "14",
            "textColor": undefined,
            "value": "14",
          },
          Object {
            "label": "15",
            "textColor": undefined,
            "value": "15",
          },
          Object {
            "label": "16",
            "textColor": undefined,
            "value": "16",
          },
          Object {
            "label": "17",
            "textColor": undefined,
            "value": "17",
          },
          Object {
            "label": "18",
            "textColor": undefined,
            "value": "18",
          },
          Object {
            "label": "19",
            "textColor": undefined,
            "value": "19",
          },
          Object {
            "label": "20",
            "textColor": undefined,
            "value": "20",
          },
          Object {
            "label": "21",
            "textColor": undefined,
            "value": "21",
          },
          Object {
            "label": "22",
            "textColor": undefined,
            "value": "22",
          },
          Object {
            "label": "23",
            "textColor": undefined,
            "value": "23",
          },
          Object {
            "label": "24",
            "textColor": undefined,
            "value": "24",
          },
          Object {
            "label": "25",
            "textColor": undefined,
            "value": "25",
          },
          Object {
            "label": "26",
            "textColor": undefined,
            "value": "26",
          },
          Object {
            "label": "27",
            "textColor": undefined,
            "value": "27",
          },
          Object {
            "label": "28",
            "textColor": undefined,
            "value": "28",
          },
          Object {
            "label": "29",
            "textColor": undefined,
            "value": "29",
          },
          Object {
            "label": "30",
            "textColor": undefined,
            "value": "30",
          },
          Object {
            "label": "31",
            "textColor": undefined,
            "value": "31",
          },
          Object {
            "label": "32",
            "textColor": undefined,
            "value": "32",
          },
          Object {
            "label": "33",
            "textColor": undefined,
            "value": "33",
          },
          Object {
            "label": "34",
            "textColor": undefined,
            "value": "34",
          },
          Object {
            "label": "35",
            "textColor": undefined,
            "value": "35",
          },
          Object {
            "label": "36",
            "textColor": undefined,
            "value": "36",
          },
          Object {
            "label": "37",
            "textColor": undefined,
            "value": "37",
          },
          Object {
            "label": "38",
            "textColor": undefined,
            "value": "38",
          },
          Object {
            "label": "39",
            "textColor": undefined,
            "value": "39",
          },
          Object {
            "label": "40",
            "textColor": undefined,
            "value": "40",
          },
          Object {
            "label": "41",
            "textColor": undefined,
            "value": "41",
          },
          Object {
            "label": "42",
            "textColor": undefined,
            "value": "42",
          },
          Object {
            "label": "43",
            "textColor": undefined,
            "value": "43",
          },
          Object {
            "label": "44",
            "textColor": undefined,
            "value": "44",
          },
          Object {
            "label": "45",
            "textColor": undefined,
            "value": "45",
          },
          Object {
            "label": "46",
            "textColor": undefined,
            "value": "46",
          },
          Object {
            "label": "47",
            "textColor": undefined,
            "value": "47",
          },
          Object {
            "label": "48",
            "textColor": undefined,
            "value": "48",
          },
          Object {
            "label": "49",
            "textColor": undefined,
            "value": "49",
          },
          Object {
            "label": "50",
            "textColor": undefined,
            "value": "50",
          },
          Object {
            "label": "51",
            "textColor": undefined,
            "value": "51",
          },
          Object {
            "label": "52",
            "textColor": undefined,
            "value": "52",
          },
          Object {
            "label": "53",
            "textColor": undefined,
            "value": "53",
          },
          Object {
            "label": "54",
            "textColor": undefined,
            "value": "54",
          },
          Object {
            "label": "55",
            "textColor": undefined,
            "value": "55",
          },
          Object {
            "label": "56",
            "textColor": undefined,
            "value": "56",
          },
          Object {
            "label": "57",
            "textColor": undefined,
            "value": "57",
          },
          Object {
            "label": "58",
            "textColor": undefined,
            "value": "58",
          },
          Object {
            "label": "59",
            "textColor": undefined,
            "value": "59",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={17}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`DatePicker Component should render picker which mode is month 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "height": 200,
        "paddingLeft": 5,
        "paddingRight": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "2000",
            "textColor": undefined,
            "value": "2000",
          },
          Object {
            "label": "2001",
            "textColor": undefined,
            "value": "2001",
          },
          Object {
            "label": "2002",
            "textColor": undefined,
            "value": "2002",
          },
          Object {
            "label": "2003",
            "textColor": undefined,
            "value": "2003",
          },
          Object {
            "label": "2004",
            "textColor": undefined,
            "value": "2004",
          },
          Object {
            "label": "2005",
            "textColor": undefined,
            "value": "2005",
          },
          Object {
            "label": "2006",
            "textColor": undefined,
            "value": "2006",
          },
          Object {
            "label": "2007",
            "textColor": undefined,
            "value": "2007",
          },
          Object {
            "label": "2008",
            "textColor": undefined,
            "value": "2008",
          },
          Object {
            "label": "2009",
            "textColor": undefined,
            "value": "2009",
          },
          Object {
            "label": "2010",
            "textColor": undefined,
            "value": "2010",
          },
          Object {
            "label": "2011",
            "textColor": undefined,
            "value": "2011",
          },
          Object {
            "label": "2012",
            "textColor": undefined,
            "value": "2012",
          },
          Object {
            "label": "2013",
            "textColor": undefined,
            "value": "2013",
          },
          Object {
            "label": "2014",
            "textColor": undefined,
            "value": "2014",
          },
          Object {
            "label": "2015",
            "textColor": undefined,
            "value": "2015",
          },
          Object {
            "label": "2016",
            "textColor": undefined,
            "value": "2016",
          },
          Object {
            "label": "2017",
            "textColor": undefined,
            "value": "2017",
          },
          Object {
            "label": "2018",
            "textColor": undefined,
            "value": "2018",
          },
          Object {
            "label": "2019",
            "textColor": undefined,
            "value": "2019",
          },
          Object {
            "label": "2020",
            "textColor": undefined,
            "value": "2020",
          },
          Object {
            "label": "2021",
            "textColor": undefined,
            "value": "2021",
          },
          Object {
            "label": "2022",
            "textColor": undefined,
            "value": "2022",
          },
          Object {
            "label": "2023",
            "textColor": undefined,
            "value": "2023",
          },
          Object {
            "label": "2024",
            "textColor": undefined,
            "value": "2024",
          },
          Object {
            "label": "2025",
            "textColor": undefined,
            "value": "2025",
          },
          Object {
            "label": "2026",
            "textColor": undefined,
            "value": "2026",
          },
          Object {
            "label": "2027",
            "textColor": undefined,
            "value": "2027",
          },
          Object {
            "label": "2028",
            "textColor": undefined,
            "value": "2028",
          },
          Object {
            "label": "2029",
            "textColor": undefined,
            "value": "2029",
          },
          Object {
            "label": "2030",
            "textColor": undefined,
            "value": "2030",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={18}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "01",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "02",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "03",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "04",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "05",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "06",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "07",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "08",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "09",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={11}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`DatePicker Component should render picker which mode is year 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "height": 200,
        "paddingLeft": 5,
        "paddingRight": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "2000",
            "textColor": undefined,
            "value": "2000",
          },
          Object {
            "label": "2001",
            "textColor": undefined,
            "value": "2001",
          },
          Object {
            "label": "2002",
            "textColor": undefined,
            "value": "2002",
          },
          Object {
            "label": "2003",
            "textColor": undefined,
            "value": "2003",
          },
          Object {
            "label": "2004",
            "textColor": undefined,
            "value": "2004",
          },
          Object {
            "label": "2005",
            "textColor": undefined,
            "value": "2005",
          },
          Object {
            "label": "2006",
            "textColor": undefined,
            "value": "2006",
          },
          Object {
            "label": "2007",
            "textColor": undefined,
            "value": "2007",
          },
          Object {
            "label": "2008",
            "textColor": undefined,
            "value": "2008",
          },
          Object {
            "label": "2009",
            "textColor": undefined,
            "value": "2009",
          },
          Object {
            "label": "2010",
            "textColor": undefined,
            "value": "2010",
          },
          Object {
            "label": "2011",
            "textColor": undefined,
            "value": "2011",
          },
          Object {
            "label": "2012",
            "textColor": undefined,
            "value": "2012",
          },
          Object {
            "label": "2013",
            "textColor": undefined,
            "value": "2013",
          },
          Object {
            "label": "2014",
            "textColor": undefined,
            "value": "2014",
          },
          Object {
            "label": "2015",
            "textColor": undefined,
            "value": "2015",
          },
          Object {
            "label": "2016",
            "textColor": undefined,
            "value": "2016",
          },
          Object {
            "label": "2017",
            "textColor": undefined,
            "value": "2017",
          },
          Object {
            "label": "2018",
            "textColor": undefined,
            "value": "2018",
          },
          Object {
            "label": "2019",
            "textColor": undefined,
            "value": "2019",
          },
          Object {
            "label": "2020",
            "textColor": undefined,
            "value": "2020",
          },
          Object {
            "label": "2021",
            "textColor": undefined,
            "value": "2021",
          },
          Object {
            "label": "2022",
            "textColor": undefined,
            "value": "2022",
          },
          Object {
            "label": "2023",
            "textColor": undefined,
            "value": "2023",
          },
          Object {
            "label": "2024",
            "textColor": undefined,
            "value": "2024",
          },
          Object {
            "label": "2025",
            "textColor": undefined,
            "value": "2025",
          },
          Object {
            "label": "2026",
            "textColor": undefined,
            "value": "2026",
          },
          Object {
            "label": "2027",
            "textColor": undefined,
            "value": "2027",
          },
          Object {
            "label": "2028",
            "textColor": undefined,
            "value": "2028",
          },
          Object {
            "label": "2029",
            "textColor": undefined,
            "value": "2029",
          },
          Object {
            "label": "2030",
            "textColor": undefined,
            "value": "2030",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={18}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`DatePicker Component should render picker which use12Hours 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "height": 200,
        "paddingLeft": 5,
        "paddingRight": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "0",
            "textColor": undefined,
            "value": "0",
          },
          Object {
            "label": "1",
            "textColor": undefined,
            "value": "1",
          },
          Object {
            "label": "2",
            "textColor": undefined,
            "value": "2",
          },
          Object {
            "label": "3",
            "textColor": undefined,
            "value": "3",
          },
          Object {
            "label": "4",
            "textColor": undefined,
            "value": "4",
          },
          Object {
            "label": "5",
            "textColor": undefined,
            "value": "5",
          },
          Object {
            "label": "6",
            "textColor": undefined,
            "value": "6",
          },
          Object {
            "label": "7",
            "textColor": undefined,
            "value": "7",
          },
          Object {
            "label": "8",
            "textColor": undefined,
            "value": "8",
          },
          Object {
            "label": "9",
            "textColor": undefined,
            "value": "9",
          },
          Object {
            "label": "10",
            "textColor": undefined,
            "value": "10",
          },
          Object {
            "label": "11",
            "textColor": undefined,
            "value": "11",
          },
          Object {
            "label": "12",
            "textColor": undefined,
            "value": "12",
          },
          Object {
            "label": "13",
            "textColor": undefined,
            "value": "13",
          },
          Object {
            "label": "14",
            "textColor": undefined,
            "value": "14",
          },
          Object {
            "label": "15",
            "textColor": undefined,
            "value": "15",
          },
          Object {
            "label": "16",
            "textColor": undefined,
            "value": "16",
          },
          Object {
            "label": "17",
            "textColor": undefined,
            "value": "17",
          },
          Object {
            "label": "18",
            "textColor": undefined,
            "value": "18",
          },
          Object {
            "label": "19",
            "textColor": undefined,
            "value": "19",
          },
          Object {
            "label": "20",
            "textColor": undefined,
            "value": "20",
          },
          Object {
            "label": "21",
            "textColor": undefined,
            "value": "21",
          },
          Object {
            "label": "22",
            "textColor": undefined,
            "value": "22",
          },
          Object {
            "label": "23",
            "textColor": undefined,
            "value": "23",
          },
          Object {
            "label": "24",
            "textColor": undefined,
            "value": "24",
          },
          Object {
            "label": "25",
            "textColor": undefined,
            "value": "25",
          },
          Object {
            "label": "26",
            "textColor": undefined,
            "value": "26",
          },
          Object {
            "label": "27",
            "textColor": undefined,
            "value": "27",
          },
          Object {
            "label": "28",
            "textColor": undefined,
            "value": "28",
          },
          Object {
            "label": "29",
            "textColor": undefined,
            "value": "29",
          },
          Object {
            "label": "30",
            "textColor": undefined,
            "value": "30",
          },
          Object {
            "label": "31",
            "textColor": undefined,
            "value": "31",
          },
          Object {
            "label": "32",
            "textColor": undefined,
            "value": "32",
          },
          Object {
            "label": "33",
            "textColor": undefined,
            "value": "33",
          },
          Object {
            "label": "34",
            "textColor": undefined,
            "value": "34",
          },
          Object {
            "label": "35",
            "textColor": undefined,
            "value": "35",
          },
          Object {
            "label": "36",
            "textColor": undefined,
            "value": "36",
          },
          Object {
            "label": "37",
            "textColor": undefined,
            "value": "37",
          },
          Object {
            "label": "38",
            "textColor": undefined,
            "value": "38",
          },
          Object {
            "label": "39",
            "textColor": undefined,
            "value": "39",
          },
          Object {
            "label": "40",
            "textColor": undefined,
            "value": "40",
          },
          Object {
            "label": "41",
            "textColor": undefined,
            "value": "41",
          },
          Object {
            "label": "42",
            "textColor": undefined,
            "value": "42",
          },
          Object {
            "label": "43",
            "textColor": undefined,
            "value": "43",
          },
          Object {
            "label": "44",
            "textColor": undefined,
            "value": "44",
          },
          Object {
            "label": "45",
            "textColor": undefined,
            "value": "45",
          },
          Object {
            "label": "46",
            "textColor": undefined,
            "value": "46",
          },
          Object {
            "label": "47",
            "textColor": undefined,
            "value": "47",
          },
          Object {
            "label": "48",
            "textColor": undefined,
            "value": "48",
          },
          Object {
            "label": "49",
            "textColor": undefined,
            "value": "49",
          },
          Object {
            "label": "50",
            "textColor": undefined,
            "value": "50",
          },
          Object {
            "label": "51",
            "textColor": undefined,
            "value": "51",
          },
          Object {
            "label": "52",
            "textColor": undefined,
            "value": "52",
          },
          Object {
            "label": "53",
            "textColor": undefined,
            "value": "53",
          },
          Object {
            "label": "54",
            "textColor": undefined,
            "value": "54",
          },
          Object {
            "label": "55",
            "textColor": undefined,
            "value": "55",
          },
          Object {
            "label": "56",
            "textColor": undefined,
            "value": "56",
          },
          Object {
            "label": "57",
            "textColor": undefined,
            "value": "57",
          },
          Object {
            "label": "58",
            "textColor": undefined,
            "value": "58",
          },
          Object {
            "label": "59",
            "textColor": undefined,
            "value": "59",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={59}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "AM",
            "textColor": undefined,
            "value": "0",
          },
          Object {
            "label": "PM",
            "textColor": undefined,
            "value": "1",
          },
        ]
      }
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
